add html skeletone,add css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <div class="logo"><a href="#Logo">Magic Goose Books</a></div>
+      <div class="logo"><a href="#Logo">taras Books</a></div>
       <nav class="hamb-menu">
         <ul class="nav-list">
           <li class="list"><a id="list-menu" href="#list">Book List</a></li>
@@ -21,3 +21,48 @@
       </nav>
     </header>
     <div class="date"></div>
+
+    <section id="list">
+        <h1>All Awesome Books</h1>
+        <div id="added-booklist" class="books"></div>
+      </section>
+      <section id="add-new">
+        <hr id="breaker" />
+        <h2>Add a new Book</h2>
+        <form id="added-book">
+          <div>
+            <label for="title"></label>
+            <input type="text" id="title" placeholder="Title" required />
+          </div>
+          <div>
+            <label for="author"></label>
+            <input type="text" id="author" placeholder="Author" required />
+          </div>
+          <div>
+            <button type="submit" id="add-button" class="btn">Add</button>
+          </div>
+        </form>
+      </section>
+  
+      <section id="contact">
+        <h2 class="contact-text">Contact Information</h2>
+  
+        <p class="contact-text" id="paragraph">
+          Do you have any question or just want to say "Hello"? <br />
+          You can reach out to us!
+        </p>
+        <ul class="contact-list">
+          <li>Our mail"tamarasiansanda18@gmail</li>
+          <li>Our phone number"+260779399711"</li>
+          <li>Our Address"lusaka,zambia"</li>
+        </ul>
+      </section>
+  
+      <footer>
+        <h2 id="footer">Copyright 2022</h2>
+      </footer>
+  
+      <script type="module" src="index.js"></script>
+    </body>
+  </html>
+  
