add js code,modules files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Awesome Books</title>
   </head>
   <body>
@@ -62,7 +62,7 @@
         <h2 id="footer">Copyright 2022</h2>
       </footer>
   
-      <script type="module" src="index.js"></script>
+      <script src="index.js" type="module"></script>
     </body>
   </html>
   
