add js code,modules files,add linter packages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <h2 class="contact-text">Contact Information</h2>
   
         <p class="contact-text" id="paragraph">
-          Do you have any question or just want to say "Hello"? <br />
+          Do you have any question or just want to say "Hello"?
+           <br />
           You can reach out to us!
         </p>
         <ul class="contact-list">
@@ -62,7 +63,7 @@
         <h2 id="footer">Copyright 2022</h2>
       </footer>
   
-      <script src="index.js" type="module"></script>
+      <script type="module"  src="index.js"></script>
     </body>
   </html>
   
